--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="main">
       <div id="header">
         <div class="row-1">
-          <div class="fleft"><a href="#">AWS and DevOps with<span> Aviz Academy</span></a></div>
+          <div class="fleft"><a href="#">AWS and DevOps Practice By<span>  DURGA RAO</span></a></div>
           <ul>
             <li><a href="validation.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 1C5.935 1 1 5.935 1 12s4.935 11 11 11 11-4.935 11-11S18.065 1 12 1zm0 20c-4.336 0-8.027-2.35-10-6 1.973-3.65 5.664-6 10-6s8.027 2.35 10 6c-1.973 3.65-5.664 6-10 6zm-1-6V7l5 5-5 5z"/></svg> Login</a></li>
             <li><a href="newuser.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 11h-6V5c0-2.206-1.794-4-4-4S5 2.794 5 5v6H1c-.553 0-1 .447-1 1s.447 1 1 1h4v6c0 2.206 1.794 4 4 4s4-1.794 4-4v-6h6c.553 0 1-.447 1-1s-.447-1-1-1zm-9 9c-2.761 0-5-2.239-5-5v-6c0-2.761 2.239-5 5-5s5 2.239 5 5v6c0 2.761-2.239 5-5 5z"/></svg> Signup</a></li>
@@ -33,8 +33,8 @@
         <div id="slogan">
           <div class="image png"></div>
           <div class="inside">
-            <h2>Empowering <span>Cloud and DevOps (WITH AVINASH) Innovators</span></h2>
-            <p>Master AWS and DevOps under the mentorship of Avinash Reddy Thipparthi, a certified expert and industry trainer with 14+ years of experience.</p>
+            <h2>TECH VEDIKA<span>Cloud and DevOps (WITH DURGA) Testing</span></h2>
+            <p>Master AWS and DevOps under the mentorship of Avinash, a certified expert and industry trainer with 14+ years of experience.</p>
             <div class="wrapper"><a href="#" class="link1">Start Learning</a></div>
           </div>
         </div>
