--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="slogan">
           <div class="image png"></div>
           <div class="inside">
-            <h2>TECH VEDIKA<span>Cloud and DevOps (WITH DURGA) Testing</span></h2>
+            <h2>TECH VEDIKA  <span>Cloud and DevOps (WITH DURGA) PRACTICE .... </span></h2>
             <p>Master AWS and DevOps under the mentorship of Avinash, a certified expert and industry trainer with 14+ years of experience.</p>
             <div class="wrapper"><a href="#" class="link1">Start Learning</a></div>
           </div>
